<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">



    <TextView
        android:id="@+id/goBackTVBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"
        android:text="@string/go_back"
        android:fontFamily="@font/activereg"
        android:textSize="25sp"
        android:textColor="@color/color_clickable"
        android:clickable="true"
        android:focusable="true"/>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/hotline"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:fontFamily="@font/activereg"
        android:textColor="@color/color_clickable"
        android:text="@string/suicide_hotline"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/activereg"
        android:text="@string/we_understand"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/hotlineImgBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/bigredbutton"
        android:background="@drawable/big_red_button_shape"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/callingInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="35sp"
            android:visibility="invisible"
            android:fontFamily="@font/activereg"
            android:textColor="@color/color_clickable"
            android:text="@string/calling_in"/>

        <TextView
            android:id="@+id/countdownIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:visibility="invisible"
            android:textSize="35sp"
            android:fontFamily="@font/activereg"
            android:text="@string/_5"
            />

    </LinearLayout>


</LinearLayout>