<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday_1600"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/messageTV"
        android:layout_marginBottom="4dp"
        />


    <ImageView
        android:id="@+id/profile_IV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/message_time"
        android:background="@drawable/avatar_back"
        android:src="@drawable/addphoto" />

    <TextView android:id="@+id/messageTV"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_IV"
            android:layout_below="@+id/message_time"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/test_message"
            android:background="@drawable/bg_receiver"
            android:padding="24dp"/>

    <TextView android:id="@+id/is_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seen"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/messageTV"
        android:layout_alignEnd="@+id/messageTV"
            />











</RelativeLayout>