<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="300dp"
    android:layout_marginTop="150dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/edit_photo"
        android:fontFamily="@font/activereg"/>

    <ImageView android:id="@+id/editAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/avatar_back"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:layout_gravity="center"
        android:fontFamily="@font/activereg"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editUsernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_login_reg"
        android:text="@string/save"
        android:textColor="@color/color_clickable" />

</LinearLayout>