<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/solace_logo"/>


            <ImageButton
                android:id="@+id/crisisHotlineImgBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="6dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:scaleType="centerCrop"
                android:background="@color/background_green"
                android:src="@drawable/hotline" />


            <TextView
                android:id="@+id/quoteOfDayTV"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:text="@string/i_always_advice_people_don_t_wait_do_something_when_you_are_young_when_you_have_no_responsibilities_invest_time_in_yourself_to_have_great_experiences_that_are_going_to_enrich_you_then_you_can_t_possibly_lose"
                android:textColor="@color/color_clickable"
                android:textSize="20sp"
                android:fontFamily="@font/activereg"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/logo"
                android:autoSizeMaxTextSize="40dp"
                android:autoSizeTextType="uniform"
                />




            <LinearLayout android:id="@+id/button_Linear"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_below="@+id/quoteOfDayTV"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="25dp"
                >

                <Button
                    android:id="@+id/select_random_button"
                    android:layout_weight=".50"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/solace_selector_button"
                    android:fontFamily="@font/activereg"
                    android:text="@string/select_random_listener"
                    android:textAlignment="center"
                    android:textColor="@color/darkGreen"
                    android:textSize="24sp"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/listener_button"
                    android:layout_weight=".50"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/solace_selector_button"
                    android:fontFamily="@font/activereg"
                    android:text="@string/listen"
                    android:textColor="@color/darkGreen"
                    android:textSize="24sp"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/button_Linear"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/activereg"
                    android:text="@string/book_of_the_week"
                    android:textColor="@color/color_clickable"
                    android:textSize="30sp" />

                <FrameLayout
                    android:id="@+id/bookOfWeekFrame"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:padding="4dp"
                    android:background="@drawable/dashboard_boxes">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/bookImgBtn"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:background="@drawable/dashboard_boxes"
                            android:scaleType="fitCenter" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="16dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/bookTitleTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hello_world"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/bookDescTV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="7"
                                android:text="@string/hello_world"
                                android:textColor="@color/black" />

                        </LinearLayout>

                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/activereg"
                    android:text="@string/resources"
                    android:textColor="@color/color_clickable"
                    android:textSize="30sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resAnxietyBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/anxiety_and_depression_association_of_america_adaa"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resAutismBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/autism_speaks"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resDepressionBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/depression_and_bipolar_support_alliance"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resLGBTBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/lgbt_national_help_center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resEatingDisorderBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/national_eating_disorders_association"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resSubstanceAbuseBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/substance_abuse_and_mental_health_services_administration"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resMentalIllnessBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/mayo_clinic_mental_illness"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resVeteransBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/national_alliance_on_mental_illness_nami_veterans_and_active_duty"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resDomesticViolenceHotlineBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/national_domestic_violence_hotline"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/dashboard_boxes"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/resVeteranHotlineBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/dashboard_boxes"
                        android:text="@string/veterans_crisis_hotline"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </FrameLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>